<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:gravity="top"
	android:orientation="vertical">
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:paddingTop="5dip"
		android:paddingBottom="20dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical" >
		<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:gravity="right"
			android:orientation="horizontal" >
			<Button android:id="@+id/btn_new"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:text="@string/new_memo" />
			<Button android:id="@+id/btn_save"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:text="@string/save" />
			<Button android:id="@+id/btn_del"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:text="@string/delete" />
		</LinearLayout>
		<EditText android:id="@+id/edit_subject"
			android:singleLine="true"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:textSize="15dip"
			android:hint="@string/subject" />
		<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"	
			android:orientation="vertical" >
			<EditText android:id="@+id/edit_memo"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:textSize="15dip"
				android:gravity="top"
				android:hint="@string/memo" />
		</ScrollView>
	</LinearLayout>
	<ListView android:id="@+id/listview"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:stackFromBottom="false"/>
</LinearLayout>

